--- a/education.html
+++ b/education.html
@@ -36,7 +36,7 @@
     <section class="container">
       <div class="row">
         
-        <div class="col-sm-6">
+        <div class="col-lg-6">
           <p class="font-weight-bold">
             Heritage Institute of Technology (2016 - 2020)
           </p>
@@ -50,7 +50,7 @@
             <!-- <li></li> -->
           </ul>
         </div>
-        <div class="col-sm-6">
+        <div class="col-lg-6">
           <p class="font-weight-bold">Salt Lake School ( 2014 - 2016 )</p>
           <a href='http://www.saltlakeschool.org/' target='_blank'  >
           <img
@@ -70,7 +70,7 @@
         <br></br>   
       </div>
       <div class="row justify-content-center">
-        <div class="col-sm-6">
+        <div class="col-lg-6">
           <p class="font-weight-bold">
             St. Augustine's Day School ( 2002 - 2014 )
           </p>
