--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     </header>
     <section class="jumbotron" id="about">
       <div class="container">
-        <h2>About Ris</h2>
+        <h2>About Rishav</h2>
       </div>
     </section>
     <section class="container">
