--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>My Personal Portfolio</title>
+    <title>Rishav Sen</title>
     <meta charset="utf-8" />
     <link
       rel="stylesheet"
@@ -29,7 +29,7 @@
     </header>
     <section class="jumbotron index">
       <div class="container">
-        <h2>Student Dev</h2>
+        <h2>Student Researcher & Developer</h2>
         <h3>Java, Python, JavaScript, C++</h3>
       </div>
     </section>
