--- a/experience.html
+++ b/experience.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>My Personal Portfolio</title>
+    <title>Rishav Sen</title>
     <meta charset="utf-8" />
     <link
       rel="stylesheet"
@@ -50,7 +50,7 @@
              <a
             href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3515043"
             target="_blank"
-               ><img title="Go to SSRN" id="img-redirect" src="./resources/arrow-redirect-interface-128.png" /></a>
+               >View</a>
           </li>
         </ul>
       </div>
