--- a/education.html
+++ b/education.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>My Personal Portfolio</title>
+    <title>Rishav Sen</title>
     <meta charset="utf-8" />
     <link
       rel="stylesheet"
