--- a/about.html
+++ b/about.html
@@ -38,15 +38,18 @@
         <div class="col-sm-6">
           <img id="my-pic" src="./resources/Rishav-pic.jpg" />
           <p style="text-align: justify; ">
-            Hello, I am Rishav. I am an EC engineer from Heriatge Institute of
+            Hello, I am Rishav, an EC engineer from Heriatge Institute of
             Technology, Kolkata (HTIK) batch of 2020. I am fascinated by the world of Electronics.
             I have developed a keen interest in Robotics, IoT, and Drones. Currently
             serving as a Customer Realtionship Management developer at TCS, Kolkata.
             
+            I have worked as a Research Assistant in Jadavpur University, Kolkata, on 
+            a project regarding Electronic Nose for Cardamom detection, supported
+            by the Govt. of West Bengal.
             I have served as a senior member of the IEEE Student Branch of my college
             and have been involved in several social, and educational and technical events
             conducted by our Student Branch.
-            I have aslo led the Aeronautics Club of HITK, as a Senior Coordinatior. 
+            Have led the Aeronautics Club of HITK, as a Senior Coordinatior. 
             Under my leadership, various technical workshops were organised.
             
             My motto has always been, To inspire and get inspired.
