--- a/about.html
+++ b/about.html
@@ -63,6 +63,7 @@
     <footer id="lined" class="container">
       <div class="row">
         <p class="col-sm-2">&copy; 2020 Rishav Sen</p>
+        <p class="col-sm-2" style='color: grey;'>&copy; This website is inteded for desktop viewing</p>
         <div class="col-sm-2">
           <a href="https://github.com/rishavsen1" target="_blank"
             ><svg
