--- a/about.html
+++ b/about.html
@@ -62,8 +62,9 @@
     </section>
     <footer id="lined" class="container">
       <div class="row">
-        <p class="col-sm-2">&copy; 2020 Rishav Sen</p>
-        <p class="col-sm-2" style='color: grey;'>&copy; This website is inteded for desktop viewing</p>
+        <p class="col-sm-2">&copy; 2020 Rishav Sen<br/>
+          <span style='color: grey;'>This website is inteded for desktop viewing</span>
+        </p>
         <div class="col-sm-2">
           <a href="https://github.com/rishavsen1" target="_blank"
             ><svg
