--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 
     <footer class="container">
       <div class="row">
-        <p class="col-sm-2">&copy; 2020 Rishav Sen</p>
+        <p class="col-sm-2">&copy; 2020 Rishav Sen<br/>
+          <span style='color: grey;'>This website is inteded for desktop viewing</span>
+        </p>
         <div class="col-sm-2">
           <a href="https://github.com/rishavsen1" target="_blank"
             ><svg
