--- a/education.html
+++ b/education.html
@@ -91,7 +91,9 @@
     </section>
     <footer id = "lined" class="container">
       <div class="row">
-        <p id = 'signature' class="col-sm-2">&copy; 2020 Rishav Sen</p>
+        <p id = 'signature' class="col-sm-2">&copy; 2020 Rishav Sen<br/>
+          <span style='color: grey;'>This website is inteded for desktop viewing</span>
+        </p>
         <div class="col-sm-2">
           <a href="https://github.com/rishavsen1" target="_blank"
             ><svg
