--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </header>
     <section class="jumbotron index">
       <div class="container">
-        <h2>Student Researcher & Developer</h2>
-        <h3>Java, Python, JavaScript, C++</h3>
+        <h2>EC Gradute, Researcher & Developer</h2>
+        <h4>Electronics Research, Java, Python, JavaScript, C++</h4>
       </div>
     </section>
 
