--- a/experience.html
+++ b/experience.html
@@ -70,6 +70,7 @@
       
       
     </section>
+<!--
     <section class="container">
       <br />
       <div class="row">
@@ -77,13 +78,13 @@
           <h5 style="text-align: center;">Java</h5>
           <img id="lang-icons" src="./resources/pngwing.com.png" />
 
-<!--           <p id="lang">4 years experience</p> -->
-        </div>
+<!--           <p id="lang">4 years experience</p> 
+<!--        </div>
         <div class="col-sm-3">
           <h5 style="text-align: center;">Python</h5>
-          <img id="lang-icons" src="./resources/5848152fcef1014c0b5e4967.png" />
+          <img id="lang-icons" src="./resources/5848152fcef1014c0b5e4967.png" /> 
 
-<!--           <p id="lang">3 years experience</p> -->
+<!--           <p id="lang">3 years experience</p>
         </div>
         <div class="col-sm-3">
           <h5 style="text-align: center;">Javascript</h5>
@@ -92,18 +93,18 @@
             src="./resources/logo-javascript-png-file-javascript-logo-png-1052.png"
           />
 
-<!--           <p id="lang">1 year experience</p> -->
-        </div>
+<!--           <p id="lang">1 year experience</p> 
+<!--        </div>
         <div class="col-sm-3">
           <h5 style="text-align: center;">C++</h5>
           <img id="lang-icons" src="./resources/c-logo-icon-28389.png" />
 
-<!--           <p id="lang">2 years experience</p> -->
-        </div>
+<!--           <p id="lang">2 years experience</p> 
+<!--         </div>
       </div>
       <br />
       <br />
-    </section>
+    </section> -->
     <section class="container">
       <h2>Professional Projects</h2>
       <div class="row">
