--- a/experience.html
+++ b/experience.html
@@ -110,8 +110,8 @@
       <div class="row">
         <ul>
           <li>
-            Designed and maintained the website of IEEE Heritage Institute of
-            Technology Student Branch
+            Designed and maintained the website of <a href = 'https://site.ieee.org/sb-hit/'>IEEE Heritage Institute of
+            Technology Student Branch</a>
           </li>
           <li>
             Designed and programmed an interface for an E-nose (project under
