--- a/experience.html
+++ b/experience.html
@@ -110,13 +110,14 @@
       <div class="row">
         <ul>
           <li>
+            Designed and programmed an interface for an Electronic-nose (project under
+            Govt. of West Bengal)
+          </li>
+          <li>
             Designed and maintained the website of <a href = 'https://site.ieee.org/sb-hit/'>IEEE Heritage Institute of
             Technology Student Branch</a>
           </li>
-          <li>
-            Designed and programmed an interface for an E-nose (project under
-            Govt. of West Bengal)
-          </li>
+          
         </ul>
       </div>
       <br />
