--- a/experience.html
+++ b/experience.html
@@ -114,7 +114,7 @@
             Govt. of West Bengal)
           </li>
           <li>
-            Designed and maintained the website of <a href = 'https://site.ieee.org/sb-hit/'>IEEE Heritage Institute of
+            Designed and maintained the website of <a href = 'https://site.ieee.org/sb-hit/' style= 'margin: 0;'>IEEE Heritage Institute of
             Technology Student Branch</a>
           </li>
           
