--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <br/>
         <br/>
         <br/>
-        <h2>EC Gradute, Researcher & Developer</h2>
+        <h2>EC Graduate, Researcher & Developer</h2>
         <h4>Electronics Research, Java, Python, JavaScript, C++</h4>
       </div>
     </section>
