--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="row">
         <h1 class="col-sm-6">Rishav Sen</h1>
         <nav class="col-sm-6 text-right">
-          <a href="about.html" style="display: inline-block;">About</a>
+<!--           <a href="about.html" style="display: inline-block;">About</a> -->
           <a href="education.html">Education</a>
           <a href="experience.html">Experience</a>
         </nav>
