--- a/education.html
+++ b/education.html
@@ -19,7 +19,7 @@
   <body>
     <header class="container">
       <div class="row">
-        <h1 class="col-sm-6">Rishav Sen</h1>
+        <h1 class="col-sm-6"><a a href="index.html">Rishav Sen</a></h1>
         <nav class="col-sm-6 text-right">
           <a href="index.html">Home</a>
 <!--           <a href="about.html">About</a> -->
