--- a/education.html
+++ b/education.html
@@ -19,7 +19,7 @@
   <body>
     <header class="container">
       <div class="row">
-        <a a href="index.html"><h1 class="col-sm-6">Rishav Sen</h1></a>
+        <a href="index.html"><h1 class="col-sm-6">Rishav Sen</h1></a>
         <nav class="col-sm-6 text-right">
           <a href="index.html">Home</a>
 <!--           <a href="about.html">About</a> -->
