--- a/experience.html
+++ b/experience.html
@@ -22,7 +22,7 @@
         <h1 class="col-sm-6">Rishav Sen</h1>
         <nav class="col-sm-6 text-right">
           <a href="index.html">Home</a>
-          <a href="about.html">About</a>
+<!--           <a href="about.html">About</a> -->
           <a href="education.html">Education</a>
           <a href="experience.html">Experience</a>
         </nav>
