--- a/education.html
+++ b/education.html
@@ -61,7 +61,7 @@
           <ul>
             <li>ISC - 94.6%</li>
             <li>Won Inter-School quiz competition</li>
-            <li>The loneliest 2 years of my life</li>
+            <li>Runners-up in Science exhibition (smoke elimination tower)  </li>
           </ul>
         </div>
         
@@ -83,7 +83,7 @@
           <ul>
             <li>ICSE - 93.2%</li>
             <li>Topped ISO Science & Mathematics Olympiad(School level)</li>
-            <li>Member of School choir</li>
+            <li>Won LINC Spelling Champs</li>
           </ul>
         </div>
       </div>
