--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="col-sm-6">
           <img id="my-pic" src="./resources/Rishav-pic.jpg" />
           <p style="text-align: justify; ">
-            Hello, I am Rishav, an EC engineer from Heriatge Institute of
+            Hello, I am Rishav, an EC engineer from Heritage Institute of
             Technology, Kolkata (HTIK) batch of 2020. I am fascinated by the world of Electronics.<br/>
             I have developed a keen interest in Robotics, IoT, and Drones. Currently
             serving as a Customer Realtionship Management developer at TCS, Kolkata.
