--- a/experience.html
+++ b/experience.html
@@ -39,6 +39,20 @@
       <div class="row">
         <ul>
           <li>
+            Microcontroller Based Sensor-Array Data Acquisition System for Electronic Nose
+             <a
+            href="https://ieeexplore.ieee.org/document/9290704"
+            target="_blank"
+               >View</a>
+          </li>
+          <li>
+            Development of an android platform for monitoring QCM sensor-array based Electronic Nose
+             <a
+            href="https://ieeexplore.ieee.org/document/9276693"
+            target="_blank"
+               >View</a>
+          </li>
+          <li>
             Development of the Data Acquisition System and GUI for QCM Sensor Based System
             <a
             href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3515846"
