--- a/experience.html
+++ b/experience.html
@@ -68,7 +68,7 @@
           </li>
         </ul>
       </div>
-      <h4>Under Review</h4>
+<!--       <h4>Under Review</h4>
       <div class='row'>
         <ul>
           <li>
@@ -78,7 +78,7 @@
             Development of an android platform for monitoring QCM sensor-array based Electronic Nose
           </li>
         </ul>
-      </div>
+      </div> -->
       
       <br />
       
