--- a/experience.html
+++ b/experience.html
@@ -35,7 +35,7 @@
     </section>
     <section class='container'>
       <h2>Publications </h2>
-      <h4>Accepted</h4>
+<!--       <h4>Accepted</h4> -->
       <div class="row">
         <ul>
           <li>
