--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
       type="text/css"
     />
     <link href="style.css" type="text/css" rel="stylesheet" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RR60CB4C9J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RR60CB4C9J');
+</script>
   </head>
   <body>
     <header class="container">
