--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if IE 8 ]><html class="ie ie8" lang="en-US"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!--><html lang="en-US"> <!--<![endif]-->
 <head>
-
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
