--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@ img.emoji {
 	<div class="vc_col-sm-6 bb-custom-side">
 		<div class="content-wrapper">
 			<div class="container">
-				<div class="wpb_gmaps_widget wpb_content_element"><div class="wpb_wrapper"><div class="wpb_map_wraper"><iframe class="map" width="100%" height="700" frameborder="0" scrolling="no" marginheight="700" marginwidth="0" src="https://www.google.com/maps/place/Baguiati,+Kolkata,+West+Bengal/@22.616833,88.4216674,15z/data=!3m1!4b1!4m5!3m4!1s0x39f89e25e6597d69:0xf2a8229a9b93e1b8!8m2!3d22.6137645!4d88.4305721"></iframe></div></div></div>
+				<div class="wpb_gmaps_widget wpb_content_element"><div class="wpb_wrapper"><div class="wpb_map_wraper"><iframe class="map" width="100%" height="700" frameborder="0" scrolling="no" marginheight="700" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14731.961670242177!2d88.42166743149694!3d22.616833012559034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89e25e6597d69%3A0xf2a8229a9b93e1b8!2sBaguiati%2C%20Kolkata%2C%20West%20Bengal!5e0!3m2!1sen!2sin!4v1622142245610!5m2!1sen!2sin%22"></iframe></div></div></div>
 			</div>
 		</div>
 	</div> 
