--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@ img.emoji {
 	<div class="vc_col-sm-6 bb-custom-side">
 		<div class="content-wrapper">
 			<div class="container">
-				<div class="wpb_gmaps_widget wpb_content_element"><div class="wpb_wrapper"><div class="wpb_map_wraper"><iframe class="map" width="100%" height="700" frameborder="0" scrolling="no" marginheight="700" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14731.961670242177!2d88.42166743149694!3d22.616833012559034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89e25e6597d69%3A0xf2a8229a9b93e1b8!2sBaguiati%2C%20Kolkata%2C%20West%20Bengal!5e0!3m2!1sen!2sin!4v1622142245610!5m2!1sen!2sin%22"></iframe></div></div></div>
+				<div class="wpb_gmaps_widget wpb_content_element"><div class="wpb_wrapper"><div class="wpb_map_wraper"><iframe class="map" width="100%" height="700" frameborder="0" scrolling="no" marginheight="700" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3683.1728381087078!2d88.42726751505222!3d22.610020085163498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a02758842a5de4d%3A0x8dad56df26e5450f!2sBaguihati%2C%20Kolkata%2C%20West%20Bengal%20700159!5e0!3m2!1sen!2sin!4v1622142679363!5m2!1sen!2sin"></iframe></div></div></div>
 			</div>
 		</div>
 	</div> 
