--- a/index.html
+++ b/index.html
@@ -362,25 +362,26 @@ img.emoji {
 		<div class="content-wrapper">
 			<div class="container">
 				<div class="vc_separator wpb_content_element  vc_separator_align_left vc_sep_width_100 vc_sep_double vc_sep_pos_align_right vc_sep_color_grey vc_separator-has-text"><span class="vc_sep_holder vc_sep_holder_l"><span  class="vc_sep_line"></span></span><h4>Portfolios</h4><span class="vc_sep_holder vc_sep_holder_r"><span  class="vc_sep_line"></span></span>
-</div><ul id="portfolio-filter-eQSfme8J87" class="portfolio-filters">
+</div>
+<ul id="portfolio-filter-eQSfme8J87" class="portfolio-filters">
 				<li class="active" data-filter="*">All</li><li data-filter=".electronics">Electronics</li><li data-filter=".builds">builds</li><li data-filter=".hobbies">Hobbies</li></ul><div id="portfolio-container-eQSfme8J87"" class="portfolio-container">
 					<div class="portfolio-item electronics">
 				     <img width="493" height="476" style="padding-top: 5px; padding-left: 5px"  src="/resources/images/elec1.jpg" class="attachment-portfolio_thumbnail size-portfolio_thumbnail wp-post-image" alt="" loading="lazy" srcset="/resources/images/elec1.jpg" sizes="(max-width: 493px) 100vw, 493px" />
 					 <div class="mask">
-						<a href="https://youtu.be/5ked21OUY2g" target="_blank"  rel="portfolio" class="fancybox ajax">
+						<a href="https://youtu.be/5ked21OUY2g" target="_blank"  rel="portfolio" >
 							<h4>E-nose for Cardamom</h4>
 							<p>3D representation of the Electronic nose developed for cardamom detection</p>
 						</a>
-						<a href="https://youtu.be/5ked21OUY2g"  target="_blank" class="more ajax"><i class="fa fa-info-circle"></i><span>Read more</span></a>
+						<a href="https://youtu.be/5ked21OUY2g"  target="_blank"><i class="fa fa-info-circle"></i><span>Read more</span></a>
 					 </div>
 				 </div><div class="portfolio-item builds">
 				     <img width="684" height="800" style="padding-top: 5px; padding-left: 5px"  src="/resources/images//drone1.jpg" class="attachment-portfolio_thumbnail size-portfolio_thumbnail wp-post-image" alt="" loading="lazy" />
 					 <div class="mask">
-						<a href="https://youtu.be/e5OpbGr-TGY" target="_blank"  rel="portfolio" class="fancybox ajax" rel="video">
+						<a href="https://youtu.be/e5OpbGr-TGY" target="_blank"  rel="portfolio" rel="video">
 							<h4>My first Drone</h4>
 							<p>Self built quadcopter. Flying high!</p>
 						</a>
-						<a href="https://youtu.be/e5OpbGr-TGY"  target="_blank" class="more ajax"><i class="fa fa-info-circle"></i><span>Read more</span></a>
+						<a href="https://youtu.be/e5OpbGr-TGY"  target="_blank"><i class="fa fa-info-circle"></i><span>Read more</span></a>
 					 </div>
 				 </div><div class="portfolio-item electronics">
 				     <img width="492" height="771" style="padding-top: 5px; padding-left: 5px"  src=/resources/images/elec2.jpg" class="attachment-portfolio_thumbnail size-portfolio_thumbnail wp-post-image" alt="" loading="lazy" srcset="/resources/images/elec2.jpg" sizes="(max-width: 492px) 100vw, 492px" />
@@ -414,19 +415,19 @@ img.emoji {
 				 <div class="portfolio-item builds">
 				     <img width="439" height="459" style="padding-top: 5px; padding-left: 5px"  src="/resources/images/img1.jpg" class="attachment-portfolio_thumbnail size-portfolio_thumbnail wp-post-image" alt="" loading="lazy" srcset="/resources/images/img1.jpg" sizes="(max-width: 439px) 100vw, 439px" />
 					 <div class="mask">
-						<a href="https://youtu.be/ktRzUjohZ6s" target="_blank"  rel="portfolio" class="fancybox ajax" rel="video">
+						<a href="https://youtu.be/ktRzUjohZ6s" target="_blank"  rel="portfolio"  rel="video">
 							<h4>3D Prints</h4>
 							<p>3D printed model of a stylized Black Panther and many more</p>
 						</a>
-						<a href="https://youtu.be/ktRzUjohZ6s"  target="_blank" class="more ajax"><i class="fa fa-info-circle"></i><span>Read more</span></a>
+						<a href="https://youtu.be/ktRzUjohZ6s"  target="_blank" ><i class="fa fa-info-circle"></i><span>Read more</span></a>
 					 </div>
 				 </div>
 				 <div class="portfolio-item hobbies">
-					<img width="476" height="498" style="padding-top: 5px; padding-left: 5px" src="/resources/images/origami_kangaroo.jpg" class="attachment-portfolio_thumbnail size-portfolio_thumbnail wp-post-image" alt="" loading="lazy" srcset="/resources/images/origami_kangaroo.jpg" sizes="(max-width: 476px) 100vw, 476px" />
+					<img width="476" height="498" style="padding-top: 5px; padding-left: 5px" src="/resources/images/origami_dragon1_out3.png" class="attachment-portfolio_thumbnail size-portfolio_thumbnail wp-post-image" alt="" loading="lazy" srcset="/resources/images/origami_dragon1_out3.jpg" sizes="(max-width: 476px) 100vw, 476px" />
 					<div class="mask">
 					   <a href="#" target="_blank"  rel="portfolio" class="fancybox ajax" rel="audio">
-						   <h4>Origami Kangaroo</h4>
-						   <p>One of my favourite animals. My Love for origami is a constant.</p>
+						   <h4>Origami Dragon</h4>
+						   <p>Dragons are majestic. My Love for origami is a constant.</p>
 					   </a>
 					   <a href="#"  target="_blank" class="more ajax"><i class="fa fa-info-circle"></i><span>Read more</span></a>
 					</div>
@@ -434,11 +435,11 @@ img.emoji {
 				 <div class="portfolio-item builds">
 					<img width="439" height="459" style="padding-top: 5px; padding-left: 5px" src="/resources/images/plane2.jpg" class="attachment-portfolio_thumbnail size-portfolio_thumbnail wp-post-image" alt="" loading="lazy" srcset="/resources/images/plane2.jpg" sizes="(max-width: 439px) 100vw, 439px" />
 					<div class="mask">
-					   <a href="https://youtu.be/ouFrVFxsGAI" target="_blank"  rel="portfolio" class="fancybox ajax" rel="video">
+					   <a href="https://youtu.be/ouFrVFxsGAI" target="_blank"  rel="portfolio"  rel="video">
 						   <h4>RC Aeroplane</h4>
 						   <p>Successfully built a model aircraft and have learnt to pilot them as well.</p>
 					   </a>
-					   <a href="https://youtu.be/ouFrVFxsGAI"  target="_blank" class="more ajax"><i class="fa fa-info-circle"></i><span>Read more</span></a>
+					   <a href="https://youtu.be/ouFrVFxsGAI"  target="_blank" ><i class="fa fa-info-circle"></i><span>Read more</span></a>
 					</div>
 				</div>
 				 <div class="portfolio-item electronics">
@@ -453,11 +454,11 @@ img.emoji {
 					 <div class="portfolio-item builds">
 						<img width="439" height="459" style="padding-top: 5px; padding-left: 5px" src="/resources/images/hovercraft1.jpg" class="attachment-portfolio_thumbnail size-portfolio_thumbnail wp-post-image" alt="" loading="lazy" srcset="/resources/images/hovercraft1.jpg" sizes="(max-width: 439px) 100vw, 439px" />
 						<div class="mask">
-						   <a href="https://youtu.be/e5OpbGr-TGY" target="_blank"  rel="portfolio" class="fancybox ajax" rel="video">
+						   <a href="https://youtu.be/e5OpbGr-TGY" target="_blank"  rel="portfolio"  rel="video">
 							   <h4>RC Hovercraft</h4>
 							   <p>RC Hovercraft, designed from scratch. Guess, I can call myself a hovercraft pilot as well ;)</p>
 						   </a>
-						   <a href="https://youtu.be/e5OpbGr-TGY"  target="_blank" class="more ajax"><i class="fa fa-info-circle"></i><span>Read more</span></a>
+						   <a href="https://youtu.be/e5OpbGr-TGY"  target="_blank" ><i class="fa fa-info-circle"></i><span>Read more</span></a>
 						</div>
 					</div>
 					 
