--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ img.emoji {
 							<h4>E-nose for Cardamom</h4>
 							<p>3D representation of the Electronic nose developed for cardamom detection</p>
 						</a>
-						<a href="https://youtu.be/5ked21OUY2g"  target="_blank"><i class="fa fa-info-circle"></i><span>Read more</span></a>
+						<a href="https://youtu.be/5ked21OUY2g"  target="_blank"><i class="fa fa-info-circle"></i><span>See more</span></a>
 					 </div>
 				 </div><div class="portfolio-item builds">
 				     <img width="684" height="800" style="padding-top: 5px; padding-left: 5px"  src="/resources/images//drone1.jpg" class="attachment-portfolio_thumbnail size-portfolio_thumbnail wp-post-image" alt="" loading="lazy" />
@@ -381,7 +381,7 @@ img.emoji {
 							<h4>My first Drone</h4>
 							<p>Self built quadcopter. Flying high!</p>
 						</a>
-						<a href="https://youtu.be/e5OpbGr-TGY"  target="_blank"><i class="fa fa-info-circle"></i><span>Read more</span></a>
+						<a href="https://youtu.be/e5OpbGr-TGY"  target="_blank"><i class="fa fa-info-circle"></i><span>See more</span></a>
 					 </div>
 				 </div><div class="portfolio-item electronics">
 				     <img width="492" height="771" style="padding-top: 5px; padding-left: 5px"  src=/resources/images/elec2.jpg" class="attachment-portfolio_thumbnail size-portfolio_thumbnail wp-post-image" alt="" loading="lazy" srcset="/resources/images/elec2.jpg" sizes="(max-width: 492px) 100vw, 492px" />
@@ -390,7 +390,7 @@ img.emoji {
 							<h4>4-bit Microprocessor</h4>
 							<p>Designed a 4 bit Microprocessor using Xilinx Spartan FPGA board</p>
 						</a>
-						<a href="#"  target="_blank" class="more ajax"><i class="fa fa-info-circle"></i><span>Read more</span></a>
+						<a href="#"  target="_blank" class="more ajax"><i class="fa fa-info-circle"></i><span>See more</span></a>
 					 </div>
 				 </div><div class="portfolio-item hobbies">
 				     <img width="476" height="498" style="padding-top: 5px; padding-left: 5px" src="/resources/images/cycle1.jpg" class="attachment-portfolio_thumbnail size-portfolio_thumbnail wp-post-image" alt="" loading="lazy" srcset="/resources/images/cycle1.jpg" sizes="(max-width: 476px) 100vw, 476px" />
@@ -399,7 +399,7 @@ img.emoji {
 							<h4>Cycling</h4>
 							<p>Cycling is a passion for more than 10 years now</p>
 						</a>
-						<a href="#"  target="_blank" class="more ajax"><i class="fa fa-info-circle"></i><span>Read more</span></a>
+						<a href="#"  target="_blank" class="more ajax"><i class="fa fa-info-circle"></i><span>See more</span></a>
 					 </div>
 				 </div>
 				 <div class="portfolio-item electronics">
@@ -409,7 +409,7 @@ img.emoji {
 						   <h4>4-bit Multiplier</h4>
 						   <p>Designed and tested a 4-bit multiplier using Cadence and Verilog for simulations</p>
 					   </a>
-					   <a href="#"  target="_blank" class="more ajax"><i class="fa fa-info-circle"></i><span>Read more</span></a>
+					   <a href="#"  target="_blank" class="more ajax"><i class="fa fa-info-circle"></i><span>See more</span></a>
 					</div>
 				</div>
 				 <div class="portfolio-item builds">
@@ -419,7 +419,7 @@ img.emoji {
 							<h4>3D Prints</h4>
 							<p>3D printed model of a stylized Black Panther and many more</p>
 						</a>
-						<a href="https://youtu.be/ktRzUjohZ6s"  target="_blank" ><i class="fa fa-info-circle"></i><span>Read more</span></a>
+						<a href="https://youtu.be/ktRzUjohZ6s"  target="_blank" ><i class="fa fa-info-circle"></i><span>See more</span></a>
 					 </div>
 				 </div>
 				 <div class="portfolio-item hobbies">
@@ -429,7 +429,7 @@ img.emoji {
 						   <h4>Origami Dragon</h4>
 						   <p>Dragons are majestic. My Love for origami is a constant.</p>
 					   </a>
-					   <a href="#"  target="_blank" class="more ajax"><i class="fa fa-info-circle"></i><span>Read more</span></a>
+					   <a href="#"  target="_blank" class="more ajax"><i class="fa fa-info-circle"></i><span>See more</span></a>
 					</div>
 				</div>
 				 <div class="portfolio-item builds">
@@ -439,7 +439,7 @@ img.emoji {
 						   <h4>RC Aeroplane</h4>
 						   <p>Successfully built a model aircraft and have learnt to pilot them as well.</p>
 					   </a>
-					   <a href="https://youtu.be/ouFrVFxsGAI"  target="_blank" ><i class="fa fa-info-circle"></i><span>Read more</span></a>
+					   <a href="https://youtu.be/ouFrVFxsGAI"  target="_blank" ><i class="fa fa-info-circle"></i><span>See more</span></a>
 					</div>
 				</div>
 				 <div class="portfolio-item electronics">
@@ -449,7 +449,7 @@ img.emoji {
 							<h4>Components</h4>
 							<p>Aesthetic pile up of electronic components</p>
 						</a>
-						<a href="https://demo.themevan.com/magicbook/portfolio/practise/"  target="_blank" class="more ajax"><i class="fa fa-info-circle"></i><span>Read more</span></a>
+						<a href="https://demo.themevan.com/magicbook/portfolio/practise/"  target="_blank" class="more ajax"><i class="fa fa-info-circle"></i><span>See more</span></a>
 					 </div>
 					 <div class="portfolio-item builds">
 						<img width="439" height="459" style="padding-top: 5px; padding-left: 5px" src="/resources/images/hovercraft1.jpg" class="attachment-portfolio_thumbnail size-portfolio_thumbnail wp-post-image" alt="" loading="lazy" srcset="/resources/images/hovercraft1.jpg" sizes="(max-width: 439px) 100vw, 439px" />
@@ -458,7 +458,7 @@ img.emoji {
 							   <h4>RC Hovercraft</h4>
 							   <p>RC Hovercraft, designed from scratch. Guess, I can call myself a hovercraft pilot as well ;)</p>
 						   </a>
-						   <a href="https://youtu.be/e5OpbGr-TGY"  target="_blank" ><i class="fa fa-info-circle"></i><span>Read more</span></a>
+						   <a href="https://youtu.be/e5OpbGr-TGY"  target="_blank" ><i class="fa fa-info-circle"></i><span>See more</span></a>
 						</div>
 					</div>
 					 
