--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ img.emoji {
 					 </div>
 				 </div>
 				 <div class="portfolio-item hobbies">
-					<img width="476" height="498" style="padding-top: 5px; padding-left: 5px" src="/resources/images/origami_dragon1_out3.png" class="attachment-portfolio_thumbnail size-portfolio_thumbnail wp-post-image" alt="" loading="lazy" srcset="/resources/images/origami_dragon1_out3.jpg" sizes="(max-width: 476px) 100vw, 476px" />
+					<img width="476" height="498" style="padding-top: 5px; padding-left: 5px" src="/resources/images/origami_dragon1_out3.png" class="attachment-portfolio_thumbnail size-portfolio_thumbnail wp-post-image" alt="" loading="lazy" srcset="/resources/images/origami_dragon1_out3.png" sizes="(max-width: 476px) 100vw, 476px" />
 					<div class="mask">
 					   <a href="#" target="_blank"  rel="portfolio" class="fancybox ajax" rel="audio">
 						   <h4>Origami Dragon</h4>
