--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ img.emoji {
 		<div class="wpb_wrapper">
 			<h1 class="huge-title">Welcome</h1>
 <p><span style="color: #c7c7c7;">Flipping one page at a time</span></p>
-<p>Hello, I am Rishav, an EC engineer from Heritage Institute of Technology, Kolkata (HITK) batch of 2020. I am fascinated by the world of Electronics and have developed a keen interest in Robotics, IoT, and Drones.</p>
+<p>Hello, I am Rishav, a Russel G. hamilton PhD scholar at Vanderbilt University, working in ScopeLabs and researching on AI and Cyber-physical systems. I am  also fascinated by the world of Electronics and have developed a keen interest in Robotics, IoT, and Drones.</p>
 
 		</div>
 	</div>
@@ -275,13 +275,26 @@ img.emoji {
 		</div>
 	</div>
 <div class="vc_separator wpb_content_element  vc_separator_align_left vc_sep_width_100 vc_sep_pos_align_left vc_sep_color_grey small vc_separator-has-text"><span class="vc_sep_holder vc_sep_holder_l"><span  class="vc_sep_line"></span></span><h4>EXPERIENCE</h4><span class="vc_sep_holder vc_sep_holder_r"><span  class="vc_sep_line"></span></span>
-</div><ul class="book-timeline">
+</div>
+<ul class="book-timeline">
 			<li>
-				<span class="time-data">2020-Present</span>
+				<span class="time-data">2021-Present</span>
+				<div class="time-dot"></div>
+				<div class="time-block">
+					<h4>PhD Scholar</h4>
+					<h5>@ Vanderbilt University School of Engineering</h5>
+					<p>Research on AI and CPS</p>
+				</div>
+			</li>
+    </ul>				
+				
+<ul class="book-timeline">
+			<li>
+				<span class="time-data">2020-2021</span>
 				<div class="time-dot"></div>
 				<div class="time-block">
 					<h4>Assistant Systems Engineer</h4>
-					<h5>@ TATA Consulatancy Services.</h5>
+					<h5>@ TATA Consulatancy Services</h5>
 					<p>Designing and maintaining micro-service websites</p>
 				</div>
 			</li>
