--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@ img.emoji {
 
 <tr>
 <td class="td-title">E-Mail:</td>
-<td>connect@rishavsen.me</td>
+<td>rishav.s3n@gmail.com</td>
 </tr>
 </tbody>
 </table>
@@ -615,7 +615,8 @@ img.emoji {
 	<li><a href="https://stackoverflow.com/users/11751813/rishav-sen/"><i class="fa fa-stack-overflow"></i></a></li>
 	<!-- <li><a href="http://tumblr.com"><i class="fa fa-tumblr"></i></a></li> -->
 </ul>
-	<div class="vc_empty_space"   style="height: 20px"><span class="vc_empty_space_inner"></span></div><div class="vc_separator wpb_content_element  vc_separator_align_left vc_sep_width_100 vc_sep_pos_align_right vc_sep_color_grey small vc_separator-has-text"><span class="vc_sep_holder vc_sep_holder_l"><span  class="vc_sep_line"></span></span><h4>SEND A MESSAGE</h4><span class="vc_sep_holder vc_sep_holder_r"><span  class="vc_sep_line"></span></span>
+<!-- 
+				<div class="vc_empty_space"   style="height: 20px"><span class="vc_empty_space_inner"></span></div><div class="vc_separator wpb_content_element  vc_separator_align_left vc_sep_width_100 vc_sep_pos_align_right vc_sep_color_grey small vc_separator-has-text"><span class="vc_sep_holder vc_sep_holder_l"><span  class="vc_sep_line"></span></span><h4>SEND A MESSAGE</h4><span class="vc_sep_holder vc_sep_holder_r"><span  class="vc_sep_line"></span></span>
 </div><div role="form" class="wpcf7" id="wpcf7-f35-p29-o1" lang="en-US" dir="ltr">
 <div class="screen-reader-response"><p role="status" aria-live="polite" aria-atomic="true"></p> <ul></ul></div>
 <form action="/magicbook/#wpcf7-f35-p29-o1" method="post" class="wpcf7-form init" novalidate="novalidate" data-status="init">
@@ -644,7 +645,7 @@ img.emoji {
 	<div class="g-recaptcha" data-sitekey="6LezyfUaAAAAAOHVXuyX7GYk0h_TZatOsPikdikB" data-callback="verifyRecaptchaCallback" data-expired-callback="expiredRecaptchaCallback"></div>
 	<input class="form-control d-none" data-recaptcha="true" required data-error="Please complete the Captcha">
 	<div class="help-block with-errors"></div>
-</div>
+</div> -->
 
 <p><input type="submit" value="Send" class="wpcf7-form-control wpcf7-submit" /></p>
 <div class="wpcf7-response-output" aria-hidden="true"></div></form></div>
